--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 p-5">
-                <h1>Benvenuto</h1>
+                <h1 id="name">Benvenuto</h1>
                 <h2 id="pssw">Genera la tua password</h2>
             </div>
         </div>
